--- a/asddas/ProgramOf/packages.config
+++ b/asddas/ProgramOf/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CrystalDecisions.CrystalReports.Engine" version="1.0.0" targetFramework="net461" />
+  <package id="CrystalDecisions.ReportSource" version="1.0.0" targetFramework="net461" />
+  <package id="CrystalDecisions.Shared" version="1.0.0" targetFramework="net461" />
+  <package id="CrystalDecisions.Windows.Forms" version="1.0.0" targetFramework="net461" />
   <package id="Google.Protobuf" version="3.5.1" targetFramework="net461" />
-  <package id="MySql.Data" version="8.0.15" targetFramework="net461" />
+  <package id="MySql.Data" version="6.9.12" targetFramework="net461" />
 </packages>
